[gd_scene load_steps=8 format=3 uid="uid://8i32brnx6mdq"]

[ext_resource type="Script" path="res://options.gd" id="1_2oh6v"]
[ext_resource type="PackedScene" uid="uid://b55yp7h0uty8s" path="res://corpus_ui.tscn" id="2_aa1sk"]
[ext_resource type="FontFile" uid="uid://bgt0wktokjwnl" path="res://assets/VT323-Regular.ttf" id="2_vco3a"]
[ext_resource type="PackedScene" uid="uid://daxgah6m83e7o" path="res://rules_ui.tscn" id="3_4ifrd"]
[ext_resource type="PackedScene" uid="uid://c7dunov8qmf6m" path="res://credits_ui.tscn" id="4_3xvev"]

[sub_resource type="Theme" id="Theme_dp5r6"]
default_font = ExtResource("2_vco3a")
default_font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5gp83"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[node name="Options" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_2oh6v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0980392, 0.0941176, 1)

[node name="Rules" parent="CanvasLayer/Background" instance=ExtResource("3_4ifrd")]
visible = false
layout_mode = 1

[node name="Corpus" parent="CanvasLayer/Background" instance=ExtResource("2_aa1sk")]
visible = false
layout_mode = 1

[node name="Credits" parent="CanvasLayer/Background" instance=ExtResource("4_3xvev")]
visible = false
layout_mode = 1

[node name="NextButton" type="Button" parent="CanvasLayer"]
offset_left = 992.0
offset_top = 10.0
offset_right = 1144.0
offset_bottom = 69.0
theme = SubResource("Theme_dp5r6")
theme_override_styles/normal = SubResource("StyleBoxFlat_5gp83")
text = "Corpus>"

[node name="PrevButton" type="Button" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 69.0
theme = SubResource("Theme_dp5r6")
theme_override_styles/normal = SubResource("StyleBoxFlat_5gp83")
text = "<Corpus"

[node name="Back" type="Button" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 80.0
offset_right = 63.0
offset_bottom = 139.0
theme = SubResource("Theme_dp5r6")
theme_override_styles/normal = SubResource("StyleBoxFlat_5gp83")
text = "<<"

[connection signal="pressed" from="CanvasLayer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
